# free_rust

./: .env  Cargo.toml  DOCKER_NOTES.md  Dockerfile  GQL_EXAMPLES.md  GQL_NOTES.md  LOGGER_NOTES.md  MIGRATIONS.sql  README.md  diesel.toml  general_idea.sql  general_idea_improved.sql
form_v1_OLD/: new_ideas.rs
migrations/2022-04-24-024111_create_users/: up.sql
migrations/2022-04-24-024225_create_dive_sessions/: down.sql  up.sql
migrations/2022-04-24-024317_create_dives/: down.sql  up.sql
migrations/2022-05-23-053101_add_users/: down.sql  up.sql
migrations/2022-05-23-053304_add_apnea_sessions/: up.sql
migrations/2022-05-23-053304_add_dive_sessions/: down.sql  up.sql
migrations/2022-05-23-053558_add_dives/: down.sql  up.sql
migrations/2023-06-10-221707_session_environment/: down.sql  up.sql
migrations/2023-06-10-233102_air_weather_types/: down.sql  up.sql
migrations/2023-06-10-233432_session_environment/: down.sql  up.sql
migrations/2023-06-11-215329_logger_category_types/: down.sql  up.sql
migrations/2023-06-11-215550_loggers/: up.sql
migrations/2023-06-11-220900_logger_input_types_and_custom_enums/: up.sql
migrations/2023-06-11-221304_all_logs/: up.sql
migrations/2023-06-11-225809_logger_category_entries/: down.sql  up.sql
migrations/2023-06-11-230106_logger_input_entries/: up.sql
migrations/2023-06-12-001341_log_category_entries/: down.sql  up.sql
migrations/2023-06-12-001842_log_input_entries/: down.sql
migrations/2023-06-13-213533_logger_category_entries/: down.sql
migrations/2023-06-13-215216_logger_input_types/: down.sql  up.sql
migrations/2023-06-13-220157_all_logs/: up.sql
migrations/2023-06-13-220536_add_forms/: down.sql  up.sql
migrations/2023-06-13-220536_loggers/: up.sql
migrations/2023-06-14-014105_logger_categories/: down.sql  up.sql
migrations/2023-06-14-014205_logger_input_types/: down.sql  up.sql
migrations/2023-06-14-014317_all_logs/: down.sql  up.sql
migrations/2023-06-14-014453_log_input_entries/: down.sql  up.sql
migrations/2023-06-15-185102_add_form_fields/: up.sql
migrations/2023-06-15-185102_logger_entries/: down.sql  up.sql
migrations/2023-06-15-185102_logger_entries_and_input_types/: down.sql  up.sql
migrations/2023-06-15-185147_add_completed_forms/: up.sql
migrations/2023-06-15-185147_add_reports/: up.sql
migrations/2023-06-15-185147_all_logs/: up.sql
migrations/2023-06-15-185219_add_completed_form_fields/: down.sql  up.sql
migrations/2023-06-15-185219_log_entries/: down.sql  up.sql
migrations/2023-07-19-173735_add_apnea_sessions/: down.sql  up.sql
migrations/2023-07-19-173828_add_dives/: down.sql  up.sql
migrations/2023-07-19-173828_add_unique_apneas/: up.sql
migrations_OLD/2023-06-13-220536_add_forms/: down.sql  up.sql
migrations_OLD/2023-06-15-185102_add_form_fields/: down.sql  up.sql
migrations_OLD/2023-06-15-185147_add_completed_forms/: down.sql  up.sql
src/: auth_data.rs  cookie_helpers.rs  data.rs  data_loaders.rs  data_objs.rs  env_data.rs  errors.rs  graphql_query.rs  graphql_schema.rs  guards.rs  helpers.rs  lib.rs  main.rs  schema.rs  session_data.rs
src/actions/: add_dive.rs  add_dive_session.rs  add_log.rs  add_logger.rs  add_to_session.rs  add_to_user_session.rs  add_user.rs  get_completed_form_by_id.rs  get_completed_form_fields_by_c_form.rs  get_completed_forms_by_user_id.rs  get_dive_by_id.rs  get_dive_session_by_id.rs  get_dive_sessions.rs  get_dive_sessions_by_id.rs  get_dive_sessions_by_user.rs  get_dives.rs  get_dives_by_session.rs  get_dives_by_user.rs  get_form_by_id.rs  get_form_fields_by_form.rs  (+32 more)
(+187 files in other folders)
