[package]
name = "free-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-cors = "0.6.1"

# ORM
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "numeric", "uuidv07", "chrono"] }

# graphql
async-graphql = {version = "3.0.38", features = ["tracing", "apollo_tracing", "uuid", "chrono", "log"]}
async-graphql-actix-web = "3.0.38"

# devtools
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bb8 = "0.8.0"
rust-argon2 = "1.0.0"
uuid = { version= "0.8.2 ", features = ["serde", "v4"] } 
tracing = "0.1.33"
slab = "0.4.6"
tracing-subscriber = "0.3.11"