[package]
name = "free_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-cors = "0.6.1"
# actix-jwt-auth-middleware = "0.1.2"

# work-around for actix-session
send_wrapper = "0.6.0"

# auth
# actix-session = {version = "0.7.2", features= ["redis-actor-session"]}
rust-argon2 = "1.0"
base64 = "0.21.2"
redis = { version = "0.23.0", features = ["tokio-comp", "r2d2"] }
r2d2 = "0.8.10"
# cookie = "0.17.0"
# redis-derive = "0.1.7"
# actix-identity = "0.5.2"

# ORM
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "numeric", "chrono", "time", "uuid", "postgres_backend", "serde_json"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# graphql
async-graphql = {version = "5.0.9", features = ["tracing", "apollo_tracing", "uuid", "chrono", "log", "uuid08", "dataloader"]}
async-graphql-actix-web = "5.0.9"

# devtools
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bb8 = "0.8.0"
uuid = { version= "1.3.3 ", features = ["serde", "v4"] } 
tracing = "0.1.33"
slab = "0.4.6"
futures-util = "0.3.0"
strum = { version = "0.25", features = ["derive"] }
enum-map = "2.5.0"
async-trait = "0.1.68" #already included
# time = "0.2.27"

# Errors and bug hunting
tracing-subscriber = "0.3.11"
anyhow = "1.0.71"
snafu = "0.7.4"
thiserror = "1.0"

